--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /public/bundles/
 /var/
 /vendor/
-/.idea/
+.idea
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
@@ -19,3 +19,4 @@
 ###< symfony/web-server-bundle ###
 
 
+.idea
